# TCR-Seg

./: README.md  pyproject.toml  requirements.txt
configs/: tcrseg_default.yaml
examples/: demo_numpy.py  run_clickseg_tcr.py
tcrseg/: __init__.py  clicks.py  component_routing.py  core.py  wrapper.py
tests/: test_core.py
