[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcrseg"
version = "0.1.0"
description = "Inference controller for click-based 2D medical image segmentation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.7",
]

[project.optional-dependencies]
demo = ["Pillow>=9.0", "matplotlib>=3.6", "PyYAML>=6.0"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["tcrseg*"]
